Ensured form looks good on mobile and desktop sized screens. #1

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: sans-serif;
+  font-family: 'Proza Libre', sans-serif;
 }
 
 .fontstyle {
@@ -7,12 +7,24 @@ body {
   font-size: 1.2rem;
 }
 
-.heading3 {
+.purple {
   background-color: #562b81;
+}
+
+.h1placement {
+  padding-left: 12px;
+}
+
+.journalhead {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
   height: 60px;
-  margin: 0;
+  margin: 0 auto;
   color: white;
   font-size: 1.5rem;
+  font-weight: 400;
+  width: 32%;
 }
 
 .imgsize {
@@ -33,8 +45,13 @@ body {
   resize: none;
 }
 
+.buttonflex {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 25px;
+}
+
 .button {
-  float: right;
   background-color: #562b81;
   color: white;
   border: none;
@@ -42,4 +59,16 @@ body {
   padding: 8px 20px;
   font-size: 1.3rem;
   cursor: pointer;
+}
+
+@media screen and (max-width: 575px) {
+  .journalhead {
+    width: 375px;
+    margin: 0;
+    padding-left: 23px;
+  }
+
+  .h1placement {
+    padding: 0;
+  }
 }
